break word to prevent overflow for long titles

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: arial;
     background-color: #e2e8f0;
+    word-break: break-word;
 }
 
 .header {
@@ -51,6 +52,8 @@ body {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
     gap: 20px;
 }
@@ -59,6 +62,8 @@ body {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
+    text-align: center;
+    padding: 5px;
 }
 
 .pages {
